# spectrum_io

./: .buildinfo  .cookietemple.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  API.html  Dockerfile  LICENSE  README.rst  ReadMe.md  _key_contributors.html  authors.html  code_of_conduct.html  contributing.html  cookietemple.cfg  genindex.html  index.html  installation.html  modules.html  news.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readme.html  reference.html  requirements.txt  search.html  searchindex.js  setup.py  spectrum_io.file.html  spectrum_io.html  spectrum_io.raw.html  spectrum_io.search_result.html  spectrum_io.spectral_library.html  usage.html
.github/: release-drafter.yml
.github/workflows/: autolabeler.yml  build_package.yml  ci.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  release_drafter.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
_sources/: contributing.rst.txt  spectrum_io.search_result.rst.txt
docs/: API.rst  Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  reference.rst  releasing.rst  requirements.txt  setup.py  spectrum_io.file.rst  spectrum_io.raw.rst  spectrum_io.rst  spectrum_io.spectral_library.rst  usage.rst
io/file/: csv.py  hdf5.py
io/raw/: msraw.py  thermo_raw.py
io/search_result/: search_results.py
makefiles/: Linux.mk  Windows.mk
prosit_io/: __init__.py
prosit_io/file/: __init__.py  csv.py  hdf5.py
prosit_io/raw/: __init__.py  msraw.py  thermo_raw.py
prosit_io/raw/utils/ThermoRawFileParser/: AWS.Logger.Core.xml  AWSSDK.CloudWatchLogs.xml  AWSSDK.Core.xml  AWSSDK.S3.xml  MathNet.Numerics.xml  NJsonSchema.xml  Newtonsoft.Json.xml  OpenMcdf.xml  Parquet.xml  System.Buffers.xml  System.IO.FileSystem.AccessControl.xml  System.Memory.xml  System.Numerics.Vectors.xml  System.Runtime.CompilerServices.Unsafe.xml  System.Security.AccessControl.xml  System.Security.Principal.Windows.xml  System.Text.Encoding.CodePages.xml  ThermoFisher.CommonCore.Data.xml  ThermoFisher.CommonCore.RawFileReader.xml  ThermoRawFileParser.exe.config  log4net.config  log4net.xml  nunit.framework.xml
prosit_io/search_result/: __init__.py  mascot.py  maxquant.py  msfragger.py  search_results.py
prosit_io/spectral_library/: __init__.py  digest.py  dlib.py  msp.py  spectral_library.py  spectronaut.py
prosit_io/spectral_library/dlib/: myPrositLib.dlib
prosit_io/spectral_library/msp/: myPrositLib.msp
prosit_io/spectral_library/spectronaut/: myPrositLib.csv
spectrum_io/: __init__.py  __main__.py
spectrum_io/d/: __init__.py  bruker.py  masterPeak.py  masterSpectrum.py  peak.py
spectrum_io/file/: __init__.py  csv.py  hdf5.py  mgf.py  parquet.ipynb  parquet.py
spectrum_io/raw/: __init__.py  msraw.py  thermo_raw.py
spectrum_io/search_result/: __init__.py  casanovo.py  filter.py  mascot.py  maxquant.py  msamanda.py  msfragger.py  openms.py  plink2.py  process.py  sage.py  scout.py  search_results.py  xisearch.py  xlinkx.py  xlinkx_HLXfile
spectrum_io/spectral_library/: __init__.py  digest.py  dlib.py  msp.py  spectral_library.py  spectronaut.py
spectrum_io/spectral_library/msp/: myPrositLib.msp
spectrum_io/timstof/: __init__.py  extract_d.R  timstof.py
tests/: __init__.py  test_main.py
tests/unit_tests/: test_bruker.py  test_digest.py  test_maxquant.py  test_msfragger.py  test_msp.py  test_msraw.py  test_openms.py  test_parquet.py  test_sage.py  test_scout.py  test_spectral_library.py  test_xisearch.py
tests/unit_tests/data/: fasta.fasta  msms.txt  msms_internal.csv  msms_internal_tmt.csv  openms.csv  openms.idXML  peptide_protein_map.tsv  peptide_protein_map.tsv.params.txt  prosit_input.csv  prosit_input_with_proteins.csv  psm.pepXML  psm.tsv  psm_mods.pepXML  psm_tmt.pepXML  psm_tmt_internal.csv  psm_tmt_internal_mods.csv  sage_output.tsv  sage_output_internal.csv  sage_output_mods.tsv  scout_output.csv  scout_output_internal.csv  test.mzml  testdf.pkl  xisearch_output_internal.tsv
(+21 files in other folders)
