[tool.poetry]
name = "prosit_io"
version = "0.1.0"
description = "Handle IO operations for Oktoberfest"
authors = ["WassimG <wassim.gabriel@tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.3.0"
h5py = "^3.1.0"
#tables = "*"
fundamentals = {git = "git@gitlab.lrz.de:compmass/prosit/tools/fundamentals.git", branch="hackathon_cleanup"}
#fundamentals = {path = "/home/matthewt/git/fundamentals"}
pymzml = "^2.5.0"
pytest = "^6.2.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=57.1.0",
    "wheel"
    ]
build-backend = "poetry.core.masonry.api"
