[tool.poetry]
name = "prosit_io"
version = "0.1.0"
description = "Handle IO operations for Oktoberfest"
authors = ["WassimG <wassim.gabriel@tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.3.0"
h5py = "^3.1.0"
fundamentals = {git = "git@gitlab.lrz.de:compmass/prosit/tools/fundamentals.git", branch="develop"}
pymzml = "^2.5.0"
pyteomics = "^4.3.3"
lxml= '^4.5.2'
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=57.1.0",
    "wheel"
    ]
build-backend = "poetry.core.masonry.api"
