[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "spectrum_io"
description = "IO related functionalities for oktoberfest."
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Wilhelmlab at Technical University of Munich"}
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/wilhelm-lab/spectrum_io"
Repository = "https://github.com/wilhelm-lab/spectrum_io"
Documentation = "https://spectrum-io.readthedocs.io"

[tool.poetry]
name = "spectrum_io"
version = "0.8.0"
description = "IO related functionalities for oktoberfest."
packages = [
    { include = "spectrum_io" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
rich = ">=10.3.0"
numpy = ">=2.0"
pandas = ">=1.3,<3.0"
h5py = "^3.1.0"
pyarrow = ">=16.0.0"
pymzml = "^2.5.0"
pyteomics = "^4.3.3"
scipy = ">=1.0.0"
spectrum-fundamentals = ">=0.9.0"
alphatims = "^1.0.8"
sortedcontainers = "^2.4.0"
pyopenms = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = "^7.0.0"
coverage = {extras = ["toml"], version = ">=7.0"}
typeguard = ">=4.0.0"
xdoctest = {extras = ["colors"], version = ">=1.0.0"}
sphinx = ">=7.0"
sphinx-autobuild = ">=2024.0.0"
pre-commit = ">=3.0.0"
pre-commit-hooks = ">=4.4.0"
sphinx-rtd-theme = ">=2.0.0"
Pygments = ">=2.16.0"
types-requests = ">=2.31.0"
sphinx-autodoc-typehints = ">=1.25.0"
Jinja2 = ">=3.1.0"
mypy = ">=1.8.0"
ruff = ">=0.9"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C90",    # mccabe
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # do not assign a lambda expression, use a def (legacy code)
    "C901",   # function is too complex (legacy code)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.coverage.paths]
source = ["spectrum_io", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spectrum_io"]

[tool.coverage.report]
show_missing = true
